--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "### Откройте pull request в ветку main из ветки, где вы разрабатывали проект, и добавьте ссылку на этот pr в README.md в ветке main.  ### ВАЖНО: pull request должен называться “Sprint i” (i — номер спринта).",
   "scripts": {
-    "start": "node ./server.js",
+    "start": "npm run build && node ./server.js",
     "dev": "parcel index.hbs --no-cache",
     "build": "parcel build index.hbs --no-cache"
   },
