--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "### Откройте pull request в ветку main из ветки, где вы разрабатывали проект, и добавьте ссылку на этот pr в README.md в ветке main.  ### ВАЖНО: pull request должен называться “Sprint i” (i — номер спринта).",
   "scripts": {
     "start": "npm run build && node ./server.js",
-    "dev": "parcel index.html --no-cache",
-    "build": "parcel build index.hbs --no-cache"
+    "dev": "parcel src/index.html --no-cache",
+    "build": "parcel build src/index.html --no-cache"
   },
   "repository": {
     "type": "git",
@@ -21,9 +21,19 @@
   "devDependencies": {
     "@anikin/parcel-transformer-handlebars": "1.0.9",
     "@anikin/parcel-transformer-handlebars-precompile": "1.0.1",
+    "@types/node": "18.14.2",
+    "@typescript-eslint/eslint-plugin": "5.53.0",
+    "@typescript-eslint/parser": "5.53.0",
+    "eslint": "8.35.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsx-a11y": "6.7.1",
     "express": "4.18.2",
     "handlebars": "4.7.7",
     "parcel": "2.8.3",
     "typescript": "4.9.5"
+  },
+  "dependencies": {
+    "nanoid": "4.0.1"
   }
 }
