--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "express": "4.18.2",
     "handlebars": "4.7.7",
     "parcel": "2.8.3",
+    "stylelint": "15.2.0",
+    "stylelint-config-standard": "30.0.1",
     "typescript": "4.9.5"
   },
   "dependencies": {
