--- a/.parcelrc
+++ b/.parcelrc
@@ -1,6 +1,10 @@
 {
   "extends": "@parcel/config-default",
+  "reporters":  ["...", "parcel-reporter-static-files-copy"],
   "transformers": {
     "*.hbs": ["@anikin/parcel-transformer-handlebars-precompile"]
+  },
+  "validators": {
+    ".{ts, tsx}": ["@parcel/validator-typescript"]
   }
 } 
