--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "### Откройте pull request в ветку main из ветки, где вы разрабатывали проект, и добавьте ссылку на этот pr в README.md в ветке main.  ### ВАЖНО: pull request должен называться “Sprint i” (i — номер спринта).",
   "scripts": {
     "start": "npm run build && node ./server.js",
-    "dev": "parcel src/index.html --no-cache",
-    "build": "parcel build src/index.html --no-cache"
+    "dev": "parcel index.html --no-cache",
+    "build": "parcel build index.html --no-cache"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,10 @@
     "url": "https://github.com/yandexlispeth/middle.messenger.praktikum.yandex/issues"
   },
   "homepage": "https://github.com/yandexlispeth/middle.messenger.praktikum.yandex#readme",
+  "staticFiles": {
+    "staticPath": "static/",
+    "watcherGlob": "**"
+  },
   "devDependencies": {
     "@anikin/parcel-transformer-handlebars": "1.0.9",
     "@anikin/parcel-transformer-handlebars-precompile": "1.0.1",
@@ -30,12 +34,15 @@
     "eslint-plugin-jsx-a11y": "6.7.1",
     "express": "4.18.2",
     "handlebars": "4.7.7",
+    "nanoid": "4.0.1",
     "parcel": "2.8.3",
+    "parcel-plugin-static-files-copy": "2.6.0",
+    "parcel-reporter-static-files-copy": "^1.5.0",
     "stylelint": "15.2.0",
     "stylelint-config-standard": "30.0.1",
     "typescript": "4.9.5"
   },
   "dependencies": {
-    "nanoid": "4.0.1"
+    "@parcel/validator-typescript": "2.8.3"
   }
 }
