--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,9 @@
 {
     "compilerOptions": {
         "module": "commonjs",
-        "target": "ES2019",
+        "target": "ES2019"
     },
     "exclude": [
         "node_modules"
     ],
-    
 }
