fixup! Правки в tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,14 @@
 {
     "compilerOptions": {
         "module": "commonjs",
-        "target": "ES2019"
-    }
+        "target": "ES2019",
+        "noImplicitAny": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "sourceMap": true,
+        "strictNullChecks": true
+    },
+    "exclude": [
+        "node_modules"
+    ],
 }
