--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "npm run build && node ./server.js",
     "dev": "parcel index.html --no-cache",
-    "build": "parcel build index.html --no-cache"
+    "build": "parcel build index.html --no-cache",
+    "test": "./node_modules/.bin/mocha --require ts-node/register --require tsconfig-paths/register --require ./mochaSetup.js './src/**/*.spec.ts'"
   },
   "repository": {
     "type": "git",
@@ -23,26 +24,35 @@
     "watcherGlob": "**"
   },
   "devDependencies": {
-    "@anikin/parcel-transformer-handlebars": "1.0.9",
+    "@anikin/parcel-transformer-handlebars": "^1.0.2",
     "@anikin/parcel-transformer-handlebars-precompile": "1.0.1",
+    "@types/chai": "^4.3.5",
+    "@types/mocha": "^10.0.1",
     "@types/node": "18.14.2",
+    "@types/sinon": "^10.0.15",
     "@typescript-eslint/eslint-plugin": "5.53.0",
     "@typescript-eslint/parser": "5.53.0",
+    "chai": "^4.3.7",
     "eslint": "8.35.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "express": "4.18.2",
     "handlebars": "4.7.7",
+    "jsdom": "^22.1.0",
+    "mocha": "^10.2.0",
     "nanoid": "4.0.1",
     "parcel": "2.8.3",
-    "parcel-plugin-static-files-copy": "2.6.0",
+    "parcel-plugin-static-files-copy": "^1.2.4",
     "parcel-reporter-static-files-copy": "^1.5.0",
     "stylelint": "15.2.0",
     "stylelint-config-standard": "30.0.1",
+    "ts-node": "^10.9.1",
+    "ts-node-register": "^1.0.0",
     "typescript": "4.9.5"
   },
   "dependencies": {
-    "@parcel/validator-typescript": "2.8.3"
+    "@parcel/validator-typescript": "2.8.3",
+    "sinon": "^15.1.2"
   }
 }
