--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "### Откройте pull request в ветку main из ветки, где вы разрабатывали проект, и добавьте ссылку на этот pr в README.md в ветке main.  ### ВАЖНО: pull request должен называться “Sprint i” (i — номер спринта).",
   "scripts": {
     "start": "npm run build && node ./server.js",
-    "dev": "parcel index.html --no-cache",
-    "build": "parcel build index.html --no-cache",
+    "dev": "webpack serve",
+    "build": "webpack --mode=development --node-env=development",
     "test": "./node_modules/.bin/mocha --require ts-node/register --require tsconfig-paths/register --require ./mochaSetup.js './src/**/*.spec.ts'"
   },
   "repository": {
@@ -33,26 +33,36 @@
     "@typescript-eslint/eslint-plugin": "5.53.0",
     "@typescript-eslint/parser": "5.53.0",
     "chai": "^4.3.7",
+    "css-loader": "^6.8.1",
     "eslint": "8.35.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "express": "4.18.2",
     "handlebars": "4.7.7",
+    "handlebars-loader": "^1.7.3",
     "jsdom": "^22.1.0",
     "mocha": "^10.2.0",
-    "nanoid": "4.0.1",
-    "parcel": "2.8.3",
-    "parcel-plugin-static-files-copy": "^1.2.4",
-    "parcel-reporter-static-files-copy": "^1.5.0",
+    "nanoid": "^4.0.2",
+    "postcss": "^8.4.24",
+    "postcss-loader": "^7.3.3",
+    "style-loader": "^3.3.3",
     "stylelint": "15.2.0",
     "stylelint-config-standard": "30.0.1",
+    "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "ts-node-register": "^1.0.0",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "webpack": "^5.86.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
     "@parcel/validator-typescript": "2.8.3",
+    "@types/nanoid": "^3.0.0",
+    "@types/uuid": "^9.0.2",
+    "html-webpack-plugin": "^5.5.3",
+    "mini-css-extract-plugin": "^2.7.6",
     "sinon": "^15.1.2"
   }
 }
