--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "npm run build && node ./server.js",
     "dev": "webpack serve",
     "build": "webpack --mode=development --node-env=development",
-    "test": "./node_modules/.bin/mocha --require ts-node/register --require tsconfig-paths/register --require ./mochaSetup.js './src/**/*.spec.ts'"
+    "test": "./node_modules/.bin/mocha --require ts-node/register --require tsconfig-paths/register --require ./mochaSetup.js './src/**/*.spec.ts'",
+    "eslint": "node_modules/.bin/eslint . --fix"
   },
   "repository": {
     "type": "git",
@@ -28,7 +29,7 @@
     "@anikin/parcel-transformer-handlebars-precompile": "1.0.1",
     "@types/chai": "^4.3.5",
     "@types/mocha": "^10.0.1",
-    "@types/node": "18.14.2",
+    "@types/node": "^20.3.1",
     "@types/sinon": "^10.0.15",
     "@typescript-eslint/eslint-plugin": "5.53.0",
     "@typescript-eslint/parser": "5.53.0",
@@ -41,6 +42,7 @@
     "express": "4.18.2",
     "handlebars": "4.7.7",
     "handlebars-loader": "^1.7.3",
+    "husky": "^8.0.3",
     "jsdom": "^22.1.0",
     "mocha": "^10.2.0",
     "nanoid": "^4.0.2",
@@ -52,8 +54,8 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "ts-node-register": "^1.0.0",
-    "typescript": "4.9.5",
-    "webpack": "^5.86.0",
+    "typescript": "^5.1.3",
+    "webpack": "^5.87.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   },
@@ -64,5 +66,10 @@
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
     "sinon": "^15.1.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm-run-all test eslint"
+    }
   }
 }
