--- a/package.json
+++ b/package.json
@@ -25,47 +25,54 @@
     "watcherGlob": "**"
   },
   "devDependencies": {
-    "@anikin/parcel-transformer-handlebars": "^1.0.2",
-    "@anikin/parcel-transformer-handlebars-precompile": "1.0.1",
-    "@types/chai": "^4.3.5",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "^20.3.1",
-    "@types/sinon": "^10.0.15",
+    "@types/chai": "4.3.5",
+    "@types/mocha": "10.0.1",
+    "@types/node": "20.3.1",
+    "@types/sinon": "10.0.15",
     "@typescript-eslint/eslint-plugin": "5.53.0",
     "@typescript-eslint/parser": "5.53.0",
-    "chai": "^4.3.7",
-    "css-loader": "^6.8.1",
+    "chai": "4.3.7",
+    "css-loader": "6.8.1",
     "eslint": "8.35.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "express": "4.18.2",
     "handlebars": "4.7.7",
-    "handlebars-loader": "^1.7.3",
-    "husky": "^8.0.3",
-    "jsdom": "^22.1.0",
-    "mocha": "^10.2.0",
-    "nanoid": "^4.0.2",
-    "postcss": "^8.4.24",
-    "postcss-loader": "^7.3.3",
-    "style-loader": "^3.3.3",
+    "handlebars-loader": "1.7.3",
+    "husky": "8.0.3",
+    "jsdom": "22.1.0",
+    "mocha": "10.2.0",
+    "nanoid": "3",
+    "postcss": "8.4.24",
+    "postcss-custom-properties": "13.2.0",
+    "postcss-import": "15.1.0",
+    "postcss-loader": "7.3.3",
+    "postcss-nesting": "11.3.0",
+    "postcss-preset-env": "8.5.0",
+    "postcss-url": "10.1.3",
+    "sass-loader": "13.3.2",
+    "scss-loader": "0.0.1",
+    "style-loader": "3.3.3",
     "stylelint": "15.2.0",
     "stylelint-config-standard": "30.0.1",
-    "ts-loader": "^9.4.3",
-    "ts-node": "^10.9.1",
-    "ts-node-register": "^1.0.0",
-    "typescript": "^5.1.3",
-    "webpack": "^5.87.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "ts-loader": "9.4.3",
+    "ts-node": "10.9.1",
+    "ts-node-register": "1.0.0",
+    "typescript": "5.1.3",
+    "webpack": "5.87.0",
+    "webpack-bundle-analyzer": "4.9.0",
+    "webpack-cli": "5.1.4",
+    "webpack-dev-server": "4.15.1"
   },
   "dependencies": {
     "@parcel/validator-typescript": "2.8.3",
-    "@types/nanoid": "^3.0.0",
-    "@types/uuid": "^9.0.2",
-    "html-webpack-plugin": "^5.5.3",
-    "mini-css-extract-plugin": "^2.7.6",
-    "sinon": "^15.1.2"
+    "@types/nanoid": "3.0.0",
+    "@types/uuid": "9.0.2",
+    "html-webpack-plugin": "5.5.3",
+    "mini-css-extract-plugin": "2.7.6",
+    "node": "20.2.0",
+    "sinon": "15.1.2"
   },
   "husky": {
     "hooks": {
