--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "webpack --mode=development --node-env=development",
     "test": "./node_modules/.bin/mocha --require ts-node/register --require tsconfig-paths/register --require ./mochaSetup.js './src/**/*.spec.ts'",
     "eslint": "node_modules/.bin/eslint . --fix",
-    "watch": "webpack --watch",
-    "prepare": "husky install"
+    "watch": "webpack --watch"
   },
   "repository": {
     "type": "git",
@@ -68,7 +67,6 @@
     "webpack-dev-server": "4.15.1"
   },
   "dependencies": {
-    "@parcel/validator-typescript": "2.8.3",
     "@types/nanoid": "3.0.0",
     "@types/uuid": "9.0.2",
     "html-webpack-plugin": "5.5.3",
