--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,5 +2,12 @@
   "extends": "stylelint-config-standard",
   "rules": {
     "selector-class-pattern": "^[a-z]([a-z0-9-_]+)?(__([a-z0-9]+-?)+)?(--([a-z0-9]+-?)+){0,2}$|^Mui.*$/gm"
-  }
+  },
+  "ignoreFiles": [
+    "build/*",
+    "public/*",
+    "dist/*",
+    "node-modules/*",
+    ".github/*"
+  ]
 }
