--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "webpack --mode=development --node-env=development",
     "test": "./node_modules/.bin/mocha --require ts-node/register --require tsconfig-paths/register --require ./mochaSetup.js './src/**/*.spec.ts'",
     "eslint": "node_modules/.bin/eslint . --fix",
-    "watch": "webpack --watch"
+    "watch": "webpack --watch",
+    "stylelint": "node_modules/.bin/stylelint '**/*.pcss'"
   },
   "repository": {
     "type": "git",
@@ -30,11 +31,11 @@
     "@types/mocha": "10.0.1",
     "@types/node": "20.3.1",
     "@types/sinon": "10.0.15",
-    "@typescript-eslint/eslint-plugin": "5.53.0",
-    "@typescript-eslint/parser": "5.53.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "@typescript-eslint/parser": "^5.59.11",
     "chai": "4.3.7",
     "css-loader": "6.8.1",
-    "eslint": "8.35.0",
+    "eslint": "^8.43.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
@@ -55,8 +56,8 @@
     "sass-loader": "13.3.2",
     "scss-loader": "0.0.1",
     "style-loader": "3.3.3",
-    "stylelint": "15.2.0",
-    "stylelint-config-standard": "30.0.1",
+    "stylelint": "^15.7.0",
+    "stylelint-config-standard": "^33.0.0",
     "ts-loader": "9.4.3",
     "ts-node": "10.9.1",
     "ts-node-register": "1.0.0",
